# banshee

./: .gitignore  AUTHORS  Banshee.sln  Makefile.am  NEWS  configure.ac
banshee/: Banshee.sln  ChangeLog  README.WINDOWS  configure.ac
banshee/docs/: Makefile.am
banshee/libbanshee/: gst-misc-0.10.c  gst-misc.h  gst-playback-0.10.c  gst-tagger.c  gst-transcode-0.10.c  libbanshee.def  libbanshee.vcproj  misc-glue.c  unistd.h
banshee/src/Extras/MusicBrainzSharp/: Artist.cs  Disc.cs  DiscWin32.cs  EnumUtil.cs  Event.cs  Inc.cs  Label.cs  Makefile.am  MusicBrainzEntity.cs  MusicBrainzException.cs  MusicBrainzItem.cs  MusicBrainzObject.cs  MusicBrainzSharp.csproj  Query.cs  Relation.cs  Release.cs  SHA1MusicBrainz.cs  Track.cs  Utilities.cs
banshee/src/Extras/MusicBrainzSharp/Properties/: AssemblyInfo.cs
banshee/src/Plugins/Banshee.Plugins.NotificationAreaIcon/: Banshee.Plugins.NotificationAreaIcon.csproj  Banshee.Plugins.NotificationAreaIcon.mdp  Makefile.am  NotificationAreaIconPlugin.cs  SystemTray.cs
banshee/src/Plugins/Banshee.Plugins.NotificationAreaIcon/Properties/: Resources.Designer.cs  Resources.resx
data/: addin-xml-strings.cs
data/desktop-files/: banshee-1.desktop.mime
help/: Makefile.am
help/cs/: cs.po
help/es/: es.po
help/fr/: fr.po
help/ja/: ja.po
help/sl/: sl.po
libbanshee/: banshee-player-pipeline.c  banshee-player-private.h  banshee-player-replaygain.c  banshee-player-video.c  banshee-player.c
list-view/: ChangeLog
list-view/Banshee.ThickClient/: AlbumListView.cs  Application.cs  ArtistListView.cs  ArtworkManager.cs  ColumnCellAlbum.cs  CompositeTrackListView.cs  TrackListView.cs
narlie/: ChangeLog  Makefile  Narlie.mds
ng-banshee/: Banshee.mds  ChangeLog  Makefile
po/: ChangeLog  LINGUAS  POTFILES.in  ast.po  cs.po  da.po  de.po  eo.po  es.po  fr.po  it.po  lv.po  nl.po  pt_BR.po  ro.po  ru.po  zh_CN.po
(+531 files in other folders)
